Code cleanups for java 17