@@ -4,6 +4,7 @@ import android.content.Context;
 import android.content.Intent;
 import android.content.res.TypedArray;
 import android.net.Uri;
+import android.os.Build;
 import android.text.Editable;
 import android.text.TextWatcher;
 import android.util.AttributeSet;
@@ -128,10 +129,15 @@ public class RegExpTextPreference extends EditTextPreference {
   }
 
   private String encoded(String text) {
-    try {
-      return URLEncoder.encode(text, StandardCharsets.UTF_8.name());
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException("Cannot encode text", e);
+    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+      return URLEncoder.encode(text, StandardCharsets.UTF_8);
+    } else {
+      try {
+        //noinspection CharsetObjectCanBeUsed
+        return URLEncoder.encode(text, StandardCharsets.UTF_8.name());
+      } catch (UnsupportedEncodingException e) {
+        throw new RuntimeException("Cannot encode text", e);
+      }
     }
   }
 }
